# ParallelCompMini2

./: .gitignore  CMakeLists.txt  README.md
client_cpp/: CMakeLists.txt  client.cpp
client_py/: client.py  requirements.txt
common/include/: csv_parser.hpp  dataset.hpp  dataset_SOA.hpp  dataset_utils.hpp  iQuery.hpp  query_SOA.hpp  query_base.hpp  query_omp.hpp  timer.hpp
common/src/: csv_parser.cpp  dataset.cpp  dataset_SOA.cpp  query_SOA.cpp  query_base.cpp  query_omp.cpp
config/: global_agency_ids.csv  global_borough_ids.csv  global_problem_ids.csv  global_status_ids.csv  insert_routes.yaml  node_A.yaml  node_B.yaml  node_C.yaml  node_D.yaml  node_E.yaml  node_F.yaml  node_G.yaml  node_H.yaml  node_I.yaml  readme.md
docs/: run_steps.md
proto/: mini2.proto
server_cpp/: CMakeLists.txt  ForwardResponseCache.cc  ForwardResponseCache.h  InsertRouteConfig.cc  InsertRouteConfig.h  Mini2ServiceImpl.cc  Mini2ServiceImpl.h  RequestJobQueue.cc  RequestJobQueue.h  server.cpp
tests/: README.md  benchmark_cache.py  benchmark_chunk_sizes.py  run_benchmarks.py  run_cluster.sh  run_test_client.sh  test_cache_demo.py  test_client.py  test_queue_demo.py
tools/: analyze_sharding.py  split_sorted_311_time_shards.py  split_time_shards.py
